examples/invalid/54_double_literal_type_mismatch.lane
module Examples.Invalid.DoubleLiteralTypeMismatch

pub let bad_double : Double = 1

pub let bad_int : Int = 1.0
